# rope

./: .gitignore  .vimrc  0-coot-history.py  0-coot-history.scm  :Unit  :w  Doxyfile  commit.h  download.js  emscripten.txt  get_hash.sh  make_test  meson-vcpkg.txt  meson.build  meson.sh  meson_options.txt  minimal_shell.html  ramachandran.csv  result.txt  test.py  vcpkg-configuration.json  vcpkg.json
ccp4/: ccp4_array.h  ccp4_errno.h  ccp4_general.c  ccp4_general.cpp  ccp4_general.h  ccp4_parser.c  ccp4_parser.h  ccp4_program.c  ccp4_program.h  ccp4_spg.h  ccp4_sysdep.h  ccp4_unitcell.h  ccp4_utils.h  cmap_data.cpp  cmap_data.h  cmap_errno.h  cmap_header.h  cmap_labels.h  cmap_skew.h  cmap_stats.h  cmap_symop.cpp  cmaplib.h  cmtzlib.c  cmtzlib.cpp  cmtzlib.h  csymlib.c  csymlib.cpp  csymlib.h  cvecmat.h  library_err.cpp  library_file.c  library_file.cpp  library_file.h  library_utils.c  library_utils.cpp  meson.build  notes.txt  pack_c.cpp  pack_c.h  syminfo.h
tests/: alignment_tool_returns_good_match_for_aspartate.cpp  alignmenttool_aligns_rhombohedral_centre_to_positions.cpp  all_hexane_torsions_in_atom_contain_atom.cpp  atom_can_use_projection.cpp  atom_cannot_have_negative_occupancy.cpp  atom_centroid_is_at_added_position.cpp  atom_code_converts_to_upper_case.cpp  atom_derived_should_immediately_match_initial_placement.cpp  atom_does_not_accept_anumeric_positions.cpp  atom_element_converts_to_upper_case.cpp  atom_element_throws_exception_if_null.cpp  atom_element_throws_exception_if_number.cpp  atom_element_trims_whitespace.cpp  atom_increments_vertex_array_by_number.cpp  atom_initialised_and_pushed_to_gui_is_renderable.cpp  atom_initialised_with_nitrogen_is_blue.cpp  atom_initialised_with_oxygen_is_red.cpp  atom_initialised_with_sulphur_is_yellow.cpp  atom_name_converts_to_upper_case.cpp  atom_number_cannot_be_negative.cpp  atom_vertices_per_atom_above_zero.cpp  atomgroup_adds_single_atom.cpp  atomgroup_can_find_added_atom.cpp  atomgroup_can_remove_existing_atom.cpp  atomgroup_cannot_remove_non_member_atom.cpp  atomgroup_does_not_add_atom_twice.cpp  atomgroup_does_not_add_identical_bondstraints.cpp  atomgroup_returns_N_and_C_terminus_anchors_for_glycine.cpp  atomgroup_returns_all_carbon_members_as_anchors_for_cyclohexane.cpp  atomgroup_returns_all_carbon_members_as_anchors_for_hexane.cpp  atomgroup_returns_described_bond_angle.cpp  atomgroup_returns_terminals_as_anchors_for_hexane.cpp  atomgroup_search_for_atomname_is_not_case_sensitive.cpp  base_filename_shortens_extension.cpp  base_filename_without_path_shortens_extension.cpp  bond_aligned_matrix_a_vector_along_z_axis.cpp  bond_aligned_matrix_handles_angles_adding_up_to_360.cpp  bond_aligned_matrix_lines_up_with_unit_cell.cpp  bondangle_added_also_increments_bondstraint.cpp  bondangle_adds_self_to_atomgroup.cpp  (+134 more)
vagabond/c4x/: Angular.h  Cluster.cpp  Cluster.h  ClusterSVD.cpp  ClusterSVD.h  ClusterTSNE.cpp  ClusterTSNE.h  Data.cpp  Data.h  DataFloat.h  DataGroup.cpp  DataGroup.h  DegreeDataGroup.cpp  DegreeDataGroup.h  DegreeTypedData.cpp  DegreeTypedData.h  Posular.h  TypedData.cpp  TypedData.h  ViewableCluster.h  meson.build
vagabond/c4x/tests/: cluster_can_svd_on_datagroup.cpp  datagroup_calculates_average.cpp  datagroup_calculates_correlation_matrix.cpp  datagroup_calculates_differences.cpp  datagroup_calculates_distance_matrix.cpp  datagroup_normalises_units.cpp  meson.build
vagabond/cmd/: CmdWorker.cpp  CmdWorker.h  Dictator.cpp  Dictator.h  Socket.cpp  Socket.h  main.cpp  meson.build  socket_LICENSE
vagabond/core/: AlignmentTool.cpp  AlignmentTool.h  AltersNetwork.cpp  AltersNetwork.h  AnchorExtension.h  ArbitraryMap.cpp  ArbitraryMap.h  Atom.cpp  Atom.h  Atom3DPosition.cpp  Atom3DPosition.h  AtomBlock.cpp  AtomBlock.h  AtomContent.cpp  AtomContent.h  AtomGraph.cpp  AtomGraph.h  AtomGroup.cpp  AtomGroup.h  AtomMap.cpp  AtomMap.h  AtomPosMap.h  AtomRecall.h  AtomSegment.cpp  AtomSegment.h  AtomWarp.cpp  AtomWarp.h  AtomsFromSequence.cpp  AtomsFromSequence.h  AxisNudger.cpp  AxisNudger.h  BFactorData.cpp  BFactorData.h  Babinet.cpp  BackboneType.h  Bin.h  BitIdentifier.cpp  BitIdentifier.h  BondAngle.cpp  BondAngle.h  (+371 more)
vagabond/core/engine/: AreaMeasurer.cpp  AreaMeasurer.h  BaseTask.h  ContactSheet.cpp  ContactSheet.h  CoordManager.cpp  CoordManager.h  CorrelationHandler.cpp  CorrelationHandler.h  Correlator.cpp  Correlator.h  ElectricFielder.cpp  ElectricFielder.h  ElementTypes.h  ExpectantPhore.h  ForceField.cpp  ForceField.h  ForceFieldHandler.cpp  Handler.cpp  (+33 more)
vagabond/gui/: AddEntity.cpp  AddEntity.h  AddModel.cpp  AddModel.h  AddObject.cpp  AddObject.h  AddRule.cpp  AddRule.h  AskYesNo.cpp  AskYesNo.h  Atom2AtomExplorer.cpp  Atom2AtomExplorer.h  Axes.cpp  Axes.h  AxesMenu.cpp  AxesMenu.h  AxisExplorer.cpp  AxisExplorer.h  AxisRequests.cpp  AxisRequests.h  BFactors.cpp  BFactors.h  BackboneTweaker.cpp  BackboneTweaker.h  BadChoice.cpp  BallAndStickOptions.cpp  BallAndStickOptions.h  BlameView.cpp  BlameView.h  Button.cpp  Button.h  ButtonResponder.h  CalculateMetadata.cpp  CalculateMetadata.h  CandidateView.cpp  CandidateView.h  ChainAssignment.cpp  ChainAssignment.h  ChangeIconOptions.cpp  ChangeIconOptions.h  (+240 more)
vagabond/untangle/: ClashView.cpp  ClashView.h  MemoryTangle.cpp  MemoryTangle.h  NonBonds.cpp  NonBonds.h  Points.cpp  Points.h  TangledBond.cpp  TangledBond.h  UndoStack.cpp  UndoStack.h  Untangle.cpp  Untangle.h  UntangleView.cpp  UntangleView.h  UntangleWindow.cpp  UntangleWindow.h  Visual.cpp  Visual.h  Write.cpp  Write.h  main.cpp  meson.build
vagabond/utils/: AcquireCoord.h  Canonical.cpp  Canonical.h  ConvertIndex.h  Face.h  FileReader.cpp  FileReader.h  Hypersphere.cpp  Hypersphere.h  LookupTable.cpp  LookupTable.h  Mapping.h  MappingToMatrix.cpp  MappingToMatrix.h  OpList.h  OpSet.h  OpVec.h  Point.h  ProbDist.cpp  ProbDist.h  Remember.h  Simplex.h  SpecialTable.cpp  SpecialTable.h  Stepped.cpp  Stepped.h  Variable.cpp  Variable.h  Vec3s.h  degrad.h  extra_curl_utils.h  gl_import.h  glm_import.h  glm_json.h  histogram.cpp  histogram.h  include_boost.h  maths.cpp  maths.h  meson.build  (+4 more)
(+819 files in other folders)
