
unit_tests = [
'atom_can_use_projection',
'atom_cannot_have_negative_occupancy',
'atom_code_converts_to_upper_case',
'atom_derived_should_immediately_match_initial_placement',
'atom_does_not_accept_anumeric_positions',
'atom_element_converts_to_upper_case',
'atom_element_throws_exception_if_null',
'atom_element_throws_exception_if_number',
'atom_element_trims_whitespace',
'atom_vertices_per_atom_above_zero',
'atomgroup_adds_single_atom',
'atomgroup_can_find_added_atom',
'atomgroup_can_remove_existing_atom',
'atomgroup_cannot_remove_non_member_atom',
'atomgroup_does_not_add_atom_twice',
'atomgroup_does_not_add_identical_bondstraints',
'base_filename_shortens_extension',
'base_filename_without_path_shortens_extension',
'bondangles_with_common_atoms_form_torsions',
'bondangle_adds_self_to_atomgroup',
'bondangle_and_permuted_bondangle_are_not_identical',
'bondangle_and_reversed_bondangle_are_identical',
'bondangle_correctly_describes_itself',
'bondangle_does_not_accept_null_initialisation',
'bond_aligned_matrix_a_vector_along_z_axis',
'bond_aligned_matrix_handles_angles_adding_up_to_360',
'bond_aligned_matrix_lines_up_with_unit_cell',
'bondcalculator_must_specify_pipeline',
'bondcalculator_must_use_non_zero_positive_threads',
'bondcalculator_returns_limited_mask_on_depth_limits',
'bondlength_added_also_increments_bondstraint',
'bondlength_adds_reference_to_atom',
'bondlength_adds_self_to_atomgroup',
'bondlength_and_reversed_bondlength_are_identical',
'bondlength_does_not_accept_null_initialisation',
'bondlength_does_not_add_atom_outside_atomgroup',
'bondlength_provides_correct_description',
'bondlength_returns_expected_value_for_measurement',
'bondlength_returns_partner_for_queried_atom',
'bondlength_throws_exception_if_queried_atom_not_member',
'bonds_uses_torsion_angle_for_three_rhombohedral_centres',
'bonds_uses_torsion_angle_for_two_rhombohedral_centres',
'bonds_uses_torsion_angle_for_two_rhombohedral_one_planar_centres',
'bondtorsion_and_reversed_bondtorsion_are_identical',
'bondtorsion_correctly_describes_itself',
'torsionbasis_adds_torsion_angles',
'box_does_not_use_projection',
'button_highlights_when_mouse_over',
'button_without_sender_does_nothing',
'chiralcentres_return_assigned_chirality_for_atoms',
'chiralities_match_permutations_of_noncentre_components',
'chirality_correctly_returns_description',
'cif2geometry_transfers_atom_ownership',
'cif2geometry_transfers_table_ownership',
'concertedbasis_returns_number_of_active_bonds',
'empty_renderable_envelope_radius_is_zero',
'filemanager_accepts_files_when_fileview_not_assigned',
'geometrytable_angle_lookup_returns_value',
'geometrytable_torsion_lookup_returns_value',
'guiatom_changes_atom_location_when_updated',
'hasbondstraints_returns_bond_length_with_specified_atoms',
'hasbondstraints_returns_bond_torsion_with_specified_atoms',
'knotter_can_knot_empty_atomgroup',
'knotter_does_not_accept_null_initialisation',
'knotter_does_not_knot_atoms_unrelated_by_lengths',
'knotter_knots_four_atoms_with_torsion',
'knotter_knots_four_atoms_correctly_assigns_central_atoms',
'knotter_knots_four_atoms_correctly_assigns_terminal_atoms',
'knotter_knots_three_atoms_related_by_bondangles',
'knotter_knots_three_atoms_related_by_length',
'knotter_knots_three_atoms_without_torsions',
'knotter_knots_two_atoms_related_by_length',
'matrix_from_unit_cell_handles_obtuse',
'matrix_from_unit_cell_handles_planar',
'pca_does_not_allow_fewer_rows_than_columns',
'pca_matrix_returns_same_result_as_glm_matrix',
'renderable_centroid_is_average_position',
'renderable_does_not_add_same_object_twice',
'renderable_envelope_radius_is_most_maximal',
'renderable_returns_vertex_count_and_size',
'right_hand_matrix_has_positive_determinant',
'simplebasis_returns_angle_for_requested_torsion',
'simplebasis_absorbs_modified_angle_into_bond_torsion',
'simplebasis_returns_modified_angle_for_requested_torsion',
'split_by_comma_leaves_dangling_strings',
'split_by_comma_starts_with_dangling_string',
'superpose_returns_identity_for_one_compared_vector',
'superpose_returns_identity_for_zero_compared_vectors',
'torsion_and_reversed_torsion_are_not_identical',
'torsion_basis_returns_positive_determinant',
'torsionbasis_is_set_to_requested_type_in_bondcalculator',
]

integration_tests = [
'alignment_tool_returns_good_match_for_aspartate',
'alignmenttool_aligns_rhombohedral_centre_to_positions',
'all_hexane_torsions_in_atom_contain_atom',
'atom_increments_vertex_array_by_number',
'atom_initialised_and_pushed_to_gui_is_renderable',
'atom_initialised_with_nitrogen_is_blue',
'atom_initialised_with_oxygen_is_red',
'atom_initialised_with_sulphur_is_yellow',
'atom_name_converts_to_upper_case',
'atom_number_cannot_be_negative',
'atomgroup_returns_N_and_C_terminus_anchors_for_glycine',
'atomgroup_returns_all_carbon_members_as_anchors_for_cyclohexane',
'atomgroup_returns_described_bond_angle',
'atomgroup_returns_terminals_as_anchors_for_hexane',
'atomgroup_search_for_atomname_is_not_case_sensitive',
'bondangle_added_also_increments_bondstraint',
'bondangle_measurement_matches_expectation_for_hs2',
'bondcalculator_acquires_consecutive_tickets',
'bondcalculator_calculates_single_samples_on_multiple_threads',
'bondcalculator_correctly_deletes_contents',
'bondcalculator_creates_bondsequence_for_glycine',
'bondcalculator_finishes_multiple_threads_without_crashing',
'bondcalculator_produces_sane_vectors_from_n',
'bondcalculator_produces_sane_vectors_from_oxt',
'bondcalculator_reproduces_torsion_angles_for_aspartate',
'bondcalculator_reproduces_torsion_angles_for_cyclohexane',
'bondcalculator_reproduces_torsion_angles_for_glycine',
'bondcalculator_reproduces_torsion_angles_for_tyrosine',
'bondcalculator_returns_correct_cmo_geometry',
'bondcalculator_returns_correct_gly_geometry',
'bondcalculator_returns_correct_h2s_geometry',
'bondcalculator_returns_correct_nh3_geometry',
'bondcalculator_returns_correct_po4_geometry',
'bondsequence_adds_10_atomgraphs_for_glycine',
'bondsequence_adds_4_atomgraphs_for_glycine_max_two_bonds_from_oxt',
'bondsequence_adds_double_blocks_for_two_glycines',
'bondsequence_always_starts_with_ghost_anchor_atom',
'bondsequence_assigns_correct_bond_numbers_in_blocks',
'bondsequence_assigns_correct_bond_order_for_glycine',
'bondsequence_child_locations_match_parent_locations',
'bondsequence_completes_atomgraph_for_hexane',
'bondsequence_has_all_atomgraph_parents_filled_except_anchor',
'bondsequence_multiplies_atomblocks_by_samples_requested',
'bondsequence_parent_locations_match_child_locations',
'bondsequencehandler_allocates_total_samples_over_all_threads',
'bondtorsion_does_not_accept_null_initialisation',
'bondtorsion_does_not_add_atom_outside_atomgroup',
'bondtorsion_returns_measurement_for_glycine_n_ca_c_o',
'chirality_is_assigned_for_aspartate_ca_atom',
'chirality_is_assigned_for_l_aspartate_ca_atom',
'chirality_sign_for_aspartate_is_obtainable',
'cif2geometry_automatically_knots_ASP_when_asked',
'cif2geometry_loading_ASP_gets_torsion',
'geometrytable_angle_lookup_is_not_permutable',
'geometrytable_angle_lookup_is_reversible',
'geometrytable_length_lookup_is_code_sensitive',
'geometrytable_length_lookup_is_reversible',
'geometrytable_torsion_lookup_is_reversible',
'glycine_matches_torsion_angle_for_H_N_C_HA3',
'inert_button_does_nothing_when_mouse_over',
'insert_four_atoms_correctly_uses_geometry',
'insert_three_atoms_handles_sum_over_360_degrees',
'insert_three_atoms_inverts_for_sum_over_360_degrees',
'knotter_loading_aspartate_has_no_warnings',
'knotter_provides_one_central_bond_angle_per_atom',
'knotter_provides_two_terminal_bond_angles_per_atom',
'knotter_returns_no_warnings_when_geometry_is_complete',
'knotter_returns_warning_when_geometry_is_incomplete',
'sequencehandler_calculates_threads_order_independent',
'superpose_creates_correct_transformation_to_superpose_vector_lists',
'superpose_does_not_flip_hand_when_asked',
'superpose_recreates_manual_shifts',
'superpose_translation_and_rotation_match_transformation',
'torsionbasis_returns_number_of_modifiable_bonds_in_glycine',
]

foreach entry : unit_tests
  t = executable(entry, entry + '.cpp', link_with : vag, cpp_args : ['-std=c++11'])
  test(entry, t, suite: 'unit')
endforeach

foreach entry : integration_tests
  t = executable(entry, entry + '.cpp', link_with : vag, cpp_args : ['-std=c++11'])
  test(entry, t, suite: 'integration')
endforeach
