vagafiles = [
cfile,
'AlignmentTool.cpp',
'ArbitraryMap.cpp',
'Atom.cpp',
'AtomBlock.cpp',
'AtomContent.cpp',
'AtomsFromSequence.cpp',
'AtomGroup.cpp',
'AtomGraph.cpp',
'AtomSegment.cpp',
'AtomMap.cpp',
'BulkMask.cpp',
'BulkMask.h',
'BondAngle.cpp',
'BondCalculator.cpp',
'BondSequence.cpp',
'BondSequenceHandler.cpp',
'BondLength.cpp',
'BondTorsion.cpp',
'Cartographer.cpp',
'Cartographer.h',
'Chain.cpp',
'Chirality.cpp',
'ChemotaxisEngine.cpp',
'CifFile.cpp',
'Complex.cpp',
'CompareDistances.cpp',
'CompareDistances.h',
'CsvFile.cpp',
'programs/Cyclic.cpp',
'ConcertedBasis.cpp',
'Diffraction.cpp',
'ElementLibrary.cpp',
'ElementSegment.cpp',
'Engine.cpp',
'Entity.cpp',
'EntityManager.cpp',
'Environment.cpp',
'FastaFile.cpp',
'Fibonacci.cpp',
'File.cpp',
'FileManager.cpp',
'FixIssues.cpp',
'GeometryTable.cpp',
'Grapher.cpp',
'HasBondstraints.cpp',
'HyperValue.cpp',
'Knotter.cpp',
'Interaction.cpp',
'Interface.cpp',
'Instance.cpp',
'Item.cpp',
'Ligand.cpp',
'LigandEntity.cpp',
'LigandEntityManager.cpp',
'matrix_functions.cpp',
'engine/AreaMeasurer.cpp',
'engine/AreaMeasurer.h',
'engine/CorrelationHandler.cpp',
'engine/Correlator.cpp',
'engine/ContactSheet.cpp',
'engine/ContactSheet.h',
'engine/ForceField.cpp',
'engine/ForceFieldHandler.cpp',
'engine/Handler.h',
'engine/MapTransferHandler.cpp',
'engine/MapSumHandler.cpp',
'engine/MechanicalBasis.cpp',
'engine/Mechanics.cpp',
'engine/SurfaceAreaHandler.cpp',
'engine/SurfaceAreaHandler.h',
'engine/SolventHandler.cpp',
'engine/SolventHandler.h',
'engine/PointStore.cpp',
'engine/PointStoreHandler.cpp',
'engine/workers/ThreadCalculatesBondSequence.cpp',
'engine/workers/ThreadCorrelation.cpp',
'engine/workers/ThreadForceFielder.cpp',
'engine/workers/ThreadExtractsBondPositions.cpp',
'engine/workers/ThreadSubmitsJobs.cpp',
'engine/workers/ThreadSurfacer.cpp',
'engine/workers/ThreadSurfacer.h',
'engine/workers/ThreadMapTransfer.cpp',
'engine/workers/ThreadMapSummer.cpp',
'engine/workers/ThreadPathTask.cpp',
'engine/workers/ThreadPathTask.h',
'engine/workers/ThreadWorksOnModel.cpp',
'engine/workers/ThreadWorksOnModel.h',
'engine/workers/ThreadCalculatesBondSequence.h',
'engine/workers/ThreadExtractsBondPositions.h',
'engine/workers/ThreadSubmitsJobs.h',
'engine/workers/ThreadWorker.h',
'Metadata.cpp',
'MetadataGroup.cpp',
'Model.cpp',
'ModelManager.cpp',
'MappingToMatrix.cpp',
'MappingToMatrix.h',
'MolRefiner.cpp',
'MtzFile.cpp',
'Network.cpp',
'Network.h',
'NetworkBasis.cpp',
'NetworkBasis.h',
'ObjectGroup.cpp',
'OnPathBasis.cpp',
'OnPathBasis.h',
'Path.cpp',
'paths/Monitor.cpp',
'paths/Monitor.h',
'paths/PathPool.cpp',
'paths/PathTask.cpp',
'paths/PathResources.cpp',
'paths/PathResources.h',
'paths/ValidationTask.cpp',
'paths/ReporterTask.cpp',
'paths/FromToTask.cpp',
'paths/OptimiseTask.cpp',
'paths/Summary.cpp',
'paths/Summary.h',
'paths/Warper.cpp',
'paths/Warper.h',
'PathFinder.cpp',
'PathManager.cpp',
'Parameter.cpp',
'Polymer.cpp',
'PdbFile.cpp',
'PolymerEntity.cpp',
'PolymerEntityManager.cpp',
'PlausibleRoute.cpp',
'PositionRefinery.cpp',
'PositionalGroup.cpp',
'RefList.cpp',
'Refinement.cpp',
'Reporter.cpp',
'Reporter.h',
'Residue.cpp',
'ResidueTorsion.cpp',
'programs/RingProgrammer.cpp',
'programs/RingProgram.cpp',
'Route.cpp',
'RouteValidator.cpp',
'Rule.cpp',
'Ruler.cpp',
'Sampler.cpp',
'Sequence.cpp',
'SequenceComparison.cpp',
'SerialRefineJob.cpp',
'SimpleBasis.cpp',
'SimplexEngine.cpp',
'SpecificNetwork.cpp',
'SpecificNetwork.h',
'SquareSplitter.cpp',
'SquareSplitter.h',
'StructureModification.cpp',
'StructureModification.cpp',
'Superpose.cpp',
'Trajectory.cpp',
'Trajectory.h',
'TorsionBasis.cpp',
'TorsionRef.cpp',
'VisualPreferences.cpp',
'WayPoint.cpp',
'WayPoint.h',
'PlausibleRoute.h',
'AlignmentTool.h',
'Atom.h',
'AtomBlock.h',
'AtomGroup.h',
'AtomsFromSequence.h',
'AtomSegment.h',
'BondAngle.h',
'BondCalculator.h',
'BondLength.h',
'BondSequence.h',
'BondSequenceHandler.h',
'BondTorsion.h',
'Bondstraint.h',
'Chirality.h',
'ChemotaxisEngine.h',
'CifFile.h',
'ConcertedBasis.h',
'programs/Cyclic.h',
'programs/ExitGroup.h',
'Engine.h',
'Fibonacci.h',
'File.h',
'GeometryTable.h',
'HasBondstraints.h',
'HyperValue.h',
'HasBondSequenceCustomisation.h',
'Knotter.h',
'Interaction.h',
'Interface.h',
'Instance.h',
'Item.h',
'Ligand.h',
'LigandEntity.h',
'LigandEntityManager.h',
'Polymer.h',
'MolRefiner.h',
'ObjectGroup.h',
'Path.h',
'PathJob.h',
'paths/PathTask.h',
'paths/ReporterTask.h',
'paths/ValidationTask.h',
'paths/FromToTask.h',
'paths/OptimiseTask.h',
'PathFinder.h',
'Parameter.h',
'PdbFile.h',
'PolymerEntity.h',
'PolymerEntityManager.h',
'PositionRefinery.h',
'PositionalGroup.h',
'RefList.h',
'Refinement.h',
'RefinementInfo.h',
'Residue.h',
'ResidueTorsion.h',
'programs/RingProgrammer.h',
'programs/RingProgram.h',
'Route.h',
'RouteValidator.h',
'SerialJob.h',
'SerialRefineJob.h',
'SimpleBasis.h',
'SimplexEngine.h',
'Superpose.h',
'TorsionBasis.h',
'engine/Vagaphore.h',
'matrix_functions.h',
'VisualPreferences.h',
]

install_headers([
'Atom.h',
'AtomGroup.h',
'AtomSegment.h',
'BondAngle.h',
'BondCalculator.h',
'BondLength.h',
'BondSequence.h',
'BondSequenceHandler.h',
'BondTorsion.h',
'Bondstraint.h',
'Chirality.h',
'CifFile.h',
'ConcertedBasis.h',
'File.h',
'GeometryTable.h',
'HasBondstraints.h',
'Knotter.h',
'PositionRefinery.h',
'RefList.h',
'SimpleBasis.h',
'SimplexEngine.h',
'Superpose.h',
'TorsionBasis.h',
'matrix_functions.h',
'VisualPreferences.h',
],
subdir : 'vagabond/core')

core = static_library('vag', vagafiles, 
	cpp_args: ['-I/usr/local/include/vaginclude', '-std=c++11', compile_args],
	link_args: [links],
	link_with: [vagutils, cluster4x],
    include_directories: ['../..'],
	dependencies : [deps], install: false)
