vagafiles = [
cfile,
'AlignmentTool.cpp',
'ArbitraryMap.cpp',
'Atom.cpp',
'Atom3DPosition.cpp',
'Atom3DPosition.h',
'AtomBlock.cpp',
'AtomContent.cpp',
'AtomsFromSequence.cpp',
'AtomGroup.cpp',
'AtomGraph.cpp',
'AtomSegment.cpp',
'AtomMap.cpp',
'AtomPosMap.h',
'AtomWarp.h',
'AtomWarp.cpp',
'BitIdentifier.cpp',
'BitIdentifier.h',
'BulkMask.cpp',
'BulkMask.h',
'BondAngle.cpp',
'BondCalculator.cpp',
'BondSequence.cpp',
'BondSequenceHandler.cpp',
'BondLength.cpp',
'BondTorsion.cpp',
'Chain.cpp',
'Chirality.cpp',
'ChemotaxisEngine.cpp',
'CifFile.cpp',
'Complex.cpp',
'CompareDistances.cpp',
'CompareDistances.h',
'CsvFile.cpp',
'programs/Cyclic.cpp',
'Diffraction.cpp',
'ElementLibrary.cpp',
'ElementSegment.cpp',
'Engine.cpp',
'Entity.cpp',
'EntityManager.cpp',
'Environment.cpp',
'FastaFile.cpp',
'Fibonacci.cpp',
'File.cpp',
'FileManager.cpp',
'FixIssues.cpp',
'GeometryTable.cpp',
'Grapher.cpp',
'HasBondstraints.cpp',
'HyperValue.cpp',
'Job.h',
'Knotter.cpp',
'Interaction.cpp',
'Interface.cpp',
'Instance.cpp',
'Item.cpp',
'Ligand.cpp',
'LigandEntity.cpp',
'LigandEntityManager.cpp',
'LBFGSEngine.cpp',
'LBFGSEngine.h',
'lbfgs/lbfgs.c',
'lbfgs/lbfgs.h',
'matrix_functions.cpp',
'engine/AreaMeasurer.cpp',
'engine/AreaMeasurer.h',
'engine/CorrelationHandler.cpp',
'engine/Correlator.cpp',
'engine/ContactSheet.cpp',
'engine/ContactSheet.h',
'engine/Handler.h',
'engine/MapTransferHandler.cpp',
'engine/MapSumHandler.cpp',
'engine/SurfaceAreaHandler.cpp',
'engine/SurfaceAreaHandler.h',
'engine/SolventHandler.cpp',
'engine/SolventHandler.h',
'engine/PointStore.cpp',
'engine/PointStoreHandler.cpp',
'engine/workers/ThreadCalculatesBondSequence.cpp',
'engine/workers/ThreadCorrelation.cpp',
'engine/workers/ThreadExtractsBondPositions.cpp',
'engine/workers/ThreadSubmitsJobs.cpp',
'engine/workers/ThreadSurfacer.cpp',
'engine/workers/ThreadSurfacer.h',
'engine/workers/ThreadMapTransfer.cpp',
'engine/workers/ThreadMapSummer.cpp',
'engine/workers/ThreadWorksOnModel.cpp',
'engine/workers/ThreadWorksOnModel.h',
'engine/workers/ThreadCalculatesBondSequence.h',
'engine/workers/ThreadExtractsBondPositions.h',
'engine/workers/ThreadSubmitsJobs.h',
'engine/workers/ThreadWorker.h',
'Metadata.cpp',
'MetadataGroup.cpp',
'Model.cpp',
'ModelManager.cpp',
'MolRefiner.cpp',
'MtzFile.cpp',
'ObjectGroup.cpp',
'Path.cpp',
'PathManager.cpp',
'Parameter.cpp',
'ParamSet.cpp',
'ParamSet.h',
'Polymer.cpp',
'PdbFile.cpp',
'PolymerEntity.cpp',
'PolymerEntityManager.cpp',
'PlausibleRoute.cpp',
'PositionRefinery.cpp',
'PositionalGroup.cpp',
'PositionalGroup.h',
'RefList.cpp',
'Refinement.cpp',
'Reporter.cpp',
'Reporter.h',
'Residue.cpp',
'Residue.h',
'ResidueTorsion.cpp',
'Result.cpp',
'RopeCluster.h',
'programs/RingProgrammer.cpp',
'programs/RingProgram.cpp',
'Route.cpp',
'RouteValidator.cpp',
'Rule.cpp',
'Ruler.cpp',
'Sampler.cpp',
'Sequence.cpp',
'SequenceComparison.cpp',
'SerialRefineJob.cpp',
'SimplexEngine.cpp',
'SquareSplitter.cpp',
'SquareSplitter.h',
'StructureModification.cpp',
'StructureModification.cpp',
'Superpose.cpp',
'Target.cpp',
'Target.h',
'TorsionBasis.cpp',
'Torsion2Atomic.cpp',
'Torsion2Atomic.h',
'TorsionRef.cpp',
'TorsionWarp.h',
'TorsionWarp.cpp',
'VisualPreferences.cpp',
'WayPoint.cpp',
'WayPoint.h',
'Warp.cpp',
'Warp.h',
'WarpControl.h',
'WarpControl.cpp',
'PlausibleRoute.h',
'AlignmentTool.h',
'Atom.h',
'AtomBlock.h',
'AtomGroup.h',
'AtomsFromSequence.h',
'AtomSegment.h',
'BondAngle.h',
'BondCalculator.h',
'BondLength.h',
'BondSequence.h',
'BondSequenceHandler.h',
'BondTorsion.h',
'Bondstraint.h',
'Chirality.h',
'ChemotaxisEngine.h',
'CifFile.h',
'programs/Cyclic.h',
'programs/ExitGroup.h',
'Engine.h',
'Fibonacci.h',
'File.h',
'GeometryTable.h',
'HasBondstraints.h',
'HyperValue.h',
'HasBondSequenceCustomisation.h',
'Knotter.h',
'Interaction.h',
'Interface.h',
'Instance.h',
'Item.h',
'Ligand.h',
'LigandEntity.h',
'LigandEntityManager.h',
'Polymer.h',
'MolRefiner.h',
'ObjectGroup.h',
'Path.h',
'PathJob.h',
'Parameter.h',
'PdbFile.h',
'PolymerEntity.h',
'PolymerEntityManager.h',
'PositionRefinery.h',
'RefList.h',
'Refinement.h',
'RefinementInfo.h',
'ResidueTorsion.h',
'programs/RingProgrammer.h',
'programs/RingProgram.h',
'Route.h',
'RouteValidator.h',
'SerialJob.h',
'SerialRefineJob.h',
'SimplexEngine.h',
'Superpose.h',
'TorsionBasis.h',
'engine/Vagaphore.h',
'matrix_functions.h',
'VisualPreferences.h',
]

install_headers([
'Atom.h',
'AtomGroup.h',
'AtomSegment.h',
'BondAngle.h',
'BondCalculator.h',
'BondLength.h',
'BondSequence.h',
'BondSequenceHandler.h',
'BondTorsion.h',
'Bondstraint.h',
'Chirality.h',
'CifFile.h',
'File.h',
'GeometryTable.h',
'HasBondstraints.h',
'Knotter.h',
'PositionRefinery.h',
'RefList.h',
'SimplexEngine.h',
'Superpose.h',
'TorsionBasis.h',
'matrix_functions.h',
'VisualPreferences.h',
],
subdir : 'vagabond/core')

core = static_library('vag', vagafiles, 
	cpp_args: ['-I/usr/local/include/vaginclude', '-std=c++14', compile_args],
	link_args: [links],
	link_with: [vagutils, cluster4x],
    include_directories: ['../..'],
	dependencies : [deps], install: false)
