vagafiles = [
cfile,
'AlignmentTool.cpp',
'Atom.cpp',
'Atom3DPosition.cpp',
'Atom3DPosition.h',
'AtomBlock.cpp',
'AtomContent.cpp',
'AtomsFromSequence.cpp',
'AtomGroup.cpp',
'AtomGraph.cpp',
'AtomPosMap.h',
'AtomWarp.h',
'AtomWarp.cpp',
'BFactorData.cpp',
'BFactorData.h',
'BitIdentifier.cpp',
'BitIdentifier.h',
'BondAngle.cpp',
'BondCalculator.cpp',
'BondSequence.cpp',
'BondSequenceHandler.cpp',
'BondLength.cpp',
'BondTorsion.cpp',
'Chain.cpp',
'Chirality.cpp',
'ChemotaxisEngine.cpp',
'Complex.cpp',
'CompareDistances.cpp',
'CompareDistances.h',
'programs/Cyclic.cpp',
'ElementLibrary.cpp',
'Engine.cpp',
'Entity.cpp',
'EntityManager.cpp',
'Environment.cpp',
'Fibonacci.cpp',
'FileManager.cpp',

'files/File.cpp',
'files/FastaFile.cpp',
'files/CifFile.cpp',
'files/CsvFile.cpp',
'files/MtzFile.cpp',
'files/PdbFile.cpp',
'files/File.h',
'files/FastaFile.h',
'files/CifFile.h',
'files/CsvFile.h',
'files/MtzFile.h',
'files/PdbFile.h',

'grids/ArbitraryMap.cpp',
'grids/ArbitraryMap.h',
'grids/AnisoMap.cpp',
'grids/AnisoMap.h',
'grids/Diffraction.cpp',
'grids/ElementSegment.cpp',
'grids/AtomMap.cpp',
'grids/AtomSegment.cpp',
'grids/AtomSegment.h',
'grids/BulkMask.cpp',
'grids/BulkMask.h',

'loopy/Conformer.cpp',
'loopy/Conformer.h',
'loopy/FilterConformer.h',
'loopy/FilterConformer.cpp',
'loopy/FilterSelfClash.h',
'loopy/FilterSelfClash.cpp',
'loopy/FilterCrystalContact.h',
'loopy/FilterCrystalContact.cpp',
'loopy/ListConformers.h',
'loopy/ListConformers.cpp',
'loopy/LoopCorrelation.cpp',
'loopy/LoopCorrelation.h',
'loopy/Loopy.cpp',
'loopy/Loopy.h',
'loopy/RoughLoop.cpp',
'loopy/RoughLoop.h',

'protonic/alignment.h',
'protonic/Coordinated.h',
'protonic/Coordinated.cpp',
'protonic/HideComplete.h',
'protonic/HideComplete.cpp',
'protonic/Hydrogenate.h',
'protonic/Hydrogenate.cpp',
'protonic/Network.h',
'protonic/Network.cpp',
'protonic/Probe.h',

'refine/Babinet.cpp',
'refine/Babinet.h',
'refine/Barycentric.cpp',
'refine/Barycentric.h',
'refine/Sampler.cpp',
'refine/Sampler.h',
'refine/Translation.cpp',
'refine/Translation.h',
'refine/RFactor.cpp',
'refine/RFactor.h',
'refine/Recombine.h',
'refine/Recombine.cpp',
'refine/Refinement.cpp',
'refine/Refinement.h',
'refine/RefinementInfo.h',
'refine/Rotation.cpp',
'refine/Rotation.h',
'refine/Unit.cpp',
'refine/Unit.h',
'refine/UpdateMap.h',
'refine/UpdateMap.cpp',
'refine/Wiggler.h',
'refine/Wiggler.cpp',

'FixIssues.cpp',
'GeometryTable.cpp',
'Grapher.cpp',
'HasBondstraints.cpp',
'HyperValue.cpp',
'Job.h',
'Knotter.cpp',
'Interaction.cpp',
'Interface.cpp',
'Instance.cpp',
'Item.cpp',
'Ligand.cpp',
'LigandEntity.cpp',
'LigandEntityManager.cpp',
'LBFGSEngine.cpp',
'LBFGSEngine.h',
'lbfgs/lbfgs.c',
'lbfgs/lbfgs.h',
'matrix_functions.cpp',
'engine/AreaMeasurer.cpp',
'engine/AreaMeasurer.h',
'engine/CorrelationHandler.cpp',
'engine/Correlator.cpp',
'engine/CoordManager.cpp',
'engine/CoordManager.h',
'engine/ContactSheet.cpp',
'engine/ContactSheet.h',
'engine/Handler.h',
'engine/ImplicitBHandler.cpp',
'engine/ImplicitBHandler.h',
'engine/MapTransferHandler.cpp',
'engine/MapSumHandler.cpp',
'engine/SurfaceAreaHandler.cpp',
'engine/SurfaceAreaHandler.h',
'engine/SolventHandler.cpp',
'engine/SolventHandler.h',
'engine/Task.h',
'engine/TaskWorker.h',
'engine/TaskWorker.cpp',
'engine/TaskPool.cpp',
'engine/workers/ThreadSurfacer.cpp',
'engine/workers/ThreadSurfacer.h',
'engine/workers/ThreadWorksOnModel.cpp',
'engine/workers/ThreadWorksOnModel.h',
'engine/workers/ThreadWorker.h',
'Metadata.cpp',
'TorsionData.cpp',
'TorsionData.h',
'Model.cpp',
'ModelManager.cpp',
'ObjectData.cpp',
'ObjectData.h',
'Path.cpp',
'PathManager.cpp',
'Parameter.cpp',
'ParamSet.cpp',
'ParamSet.h',
'Polymer.cpp',
'PolymerEntity.cpp',
'PolymerEntityManager.cpp',
'PlausibleRoute.cpp',
'PositionRefinery.cpp',
'PositionData.cpp',
'PositionData.h',
'RefList.cpp',
'Reporter.cpp',
'Reporter.h',
'Residue.cpp',
'Residue.h',
'ResidueTorsion.cpp',
'Result.cpp',
'Result.h',
'programs/RingProgrammer.cpp',
'programs/RingProgram.cpp',
'Route.cpp',
'RouteValidator.cpp',
'Rule.cpp',
'Ruler.cpp',
'Scaler.cpp',
'Scaler.h',
'Sequence.cpp',
'SequenceComparison.cpp',
'SerialRefineJob.cpp',
'SimplexEngine.cpp',
'SquareSplitter.cpp',
'SquareSplitter.h',
'StructureModification.cpp',
'StructureModification.cpp',
'Superpose.cpp',
'Target.cpp',
'Target.h',
'TabulatedData.cpp',
'TabulatedData.h',

'TorsionBasis.cpp',
'Torsion2Atomic.cpp',
'Torsion2Atomic.h',
'TorsionRef.cpp',
'TorsionWarp.h',
'TorsionWarp.cpp',
'VisualPreferences.cpp',
'VisualPreferences.h',
'VagabondPositions.cpp',
'VagabondPositions.h',
'WayPoint.cpp',
'WayPoint.h',
'Warp.cpp',
'Warp.h',
'WarpControl.h',
'WarpControl.cpp',
'PlausibleRoute.h',
'AlignmentTool.h',
'Atom.h',
'AtomBlock.h',
'AtomGroup.h',
'AtomsFromSequence.h',
'BondAngle.h',
'BondCalculator.h',
'BondLength.h',
'BondSequence.h',
'BondSequenceHandler.h',
'BondTorsion.h',
'Bondstraint.h',
'Chirality.h',
'ChemotaxisEngine.h',
'programs/Cyclic.h',
'programs/ExitGroup.h',
'Engine.h',
'Fibonacci.h',
'GeometryTable.h',
'HasBondstraints.h',
'HyperValue.h',
'HasBondSequenceCustomisation.h',
'Knotter.h',
'Interaction.h',
'Interface.h',
'Instance.h',
'Item.h',
'Ligand.h',
'LigandEntity.h',
'LigandEntityManager.h',
'Polymer.h',
'Path.h',
'PathJob.h',
'Parameter.h',
'PolymerEntity.h',
'PolymerEntityManager.h',
'PositionRefinery.h',
'RefList.h',
'ResidueTorsion.h',
'programs/RingProgrammer.h',
'programs/RingProgram.h',
'Route.h',
'RouteValidator.h',
'SerialJob.h',
'SerialRefineJob.h',
'SimplexEngine.h',
'Superpose.h',
'TorsionBasis.h',
'engine/Vagaphore.h',
'matrix_functions.h',
'VisualPreferences.h',
]

install_headers([
'Atom.h',
'AtomGroup.h',
'BondAngle.h',
'BondCalculator.h',
'BondLength.h',
'BondSequence.h',
'BondSequenceHandler.h',
'BondTorsion.h',
'Bondstraint.h',
'Chirality.h',
'GeometryTable.h',
'HasBondstraints.h',
'Knotter.h',
'PositionRefinery.h',
'RefList.h',
'SimplexEngine.h',
'Superpose.h',
'TorsionBasis.h',
'matrix_functions.h',
'VisualPreferences.h',
],
subdir : 'vagabond/core')

core = static_library('vag', vagafiles, 
	cpp_args: ['-I/usr/local/include/vaginclude', '-std=c++14', compile_args],
	link_args: [links],
	link_with: [vagutils, cluster4x],
    include_directories: ['../..'],
	dependencies : [deps], install: false)
